test: 생성 확인 뿐 아니라 정렬 테스트 추가