@@ -1,11 +1,11 @@
 package lotto.model;
 
 
-import static camp.nextstep.edu.missionutils.test.Assertions.*;
-import static org.assertj.core.api.Assertions.*;
+import static camp.nextstep.edu.missionutils.test.Assertions.assertRandomUniqueNumbersInRangeTest;
+import static org.assertj.core.api.Assertions.assertThat;
 
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -17,13 +17,16 @@ class RandomLottoGeneratorTest {
     @DisplayName("랜덤_로또_생성_테스트")
     void generate() {
         RandomLottoGenerator lottoGenerator = new RandomLottoGenerator();
-        List<Integer> randomNums = new ArrayList<>(Arrays.asList(1, 2, 3, 4, 5, 6));
+        List<Integer> nums = List.of(6, 5, 4, 3, 2, 1);
+        List<Integer> expectedNums = new ArrayList<>(nums);
+        Collections.sort(expectedNums);
+
         assertRandomUniqueNumbersInRangeTest(
-                ()->{
+                () -> {
                     Lotto lotto = lottoGenerator.generate();
-                    assertThat(lotto.numbers()).isEqualTo(randomNums);
+                    assertThat(lotto.numbers()).isEqualTo(expectedNums);
                 },
-                randomNums
+                nums
         );
 
     }
